--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
 
   <style>
@@ -33,6 +34,32 @@
       <h1>Welcome to the Liverpool FC Fan App!</h1>
       <p class="lead">Latest news, player stats, and standings.</p>
     </div>
+    <div id="overlay" class="text-center my-4">
+  <img src="icon.png" alt="Liverpool Icon" class="top-icon mb-3" />
+  <h1 class="h1">Liverpool Live</h1>
+
+  <section id="liveSection" class="my-4">
+    <h2 class="h4">🔥 Live Match</h2>
+    <div id="liveMatchesList"></div>
+  </section>
+
+  <section id="lastMatchesSection" class="my-4">
+    <h2 class="h4">Last Matches</h2>
+    <div id="lastMatchesList">Loading…</div>
+  </section>
+
+  <section id="matchesSection" class="my-4">
+    <h2 class="h4">Upcoming Matches</h2>
+    <div id="matchesList">Loading…</div>
+  </section>
+
+  <section id="support" class="my-4">
+    <h2 class="h4">Support the Project</h2>
+    <a href="https://www.buymeacoffee.com/YOURNAME" target="_blank" class="btn btn-warning my-2">☕ Buy Me a Coffee</a><br />
+    <a href="https://fanatics.com/liverpool-shirt?ref=yourAffiliateID" target="_blank" class="btn btn-success my-2">🛒 Liverpool Merch</a>
+  </section>
+</div>
+
 
     <hr>
     <div class="table-responsive mt-4">
@@ -122,6 +149,8 @@
       });
     });
   </script>
+<script src="popup.js"></script>
+
 
 
 </body>
