--- a/html/past.html
+++ b/html/past.html
@@ -3,20 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Live Matches | Liverpool FC App</title>
+  <title>Past Matches | Liverpool FC App</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom Styles -->
   <link rel="stylesheet" href="css/style.css">
-
-  <!-- Manifest for PWA -->
   <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
-  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Liverpool FC App</a>
@@ -35,18 +30,15 @@
   </nav>
 
   <!-- Main Content -->
-  <div class="container my-4" id="liveMatchesContainer">
-    <h1 class="text-center text-white mb-4">Live Matches</h1>
-    <p class="text-center text-white">Loading live matches...</p>
+  <div class="container my-4" id="pastMatchesContainer">
+    <h1 class="text-center text-white mb-4">Past Matches</h1>
+    <p class="text-center text-white">Loading finished matches...</p>
   </div>
 
-  <!-- Bootstrap JS -->
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/pastMatches.js"></script>
 
-  <!-- Custom Scripts -->
-  <script src="js/liveMatches.js"></script>
-
-  <!-- Service Worker Registration -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js').then(() => {
